# outbox2kafka

./: Cargo.toml  README.md
src/: args.rs  cleaner.rs  cli.rs  db.rs  error.rs  main.rs  model.rs  outbox.rs  producer.rs  repo.rs
