[package]
name = "outbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
rustls = "0.20.6"
async-trait = "0.1.57"
serde_json = "1.0.83"
rdkafka = { version = "0.25", features = ["cmake-build"] }
structopt = { version = "0.3", default-features = false }
duration-str = "0.4.0"
kafka = "0.9"
log = "0.4.17"
env_logger = "0.9.0"
