[package]
name = "outbox2kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
rustls = "0.20.6"
futures = "0.3"
async-trait = "0.1.57"
serde_json = "1.0.83"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.22"
duration-str = "0.4.0"
once_cell = "1.15.0"
